2007-08-18  Inge Wallin  <inge@lysator.liu.se>

	d-pointerify MarbleDirs
	* src/lib/MarbleDirs.{h,cpp}: add d-pointer

	d-pointerify MarbleThemeSelectView
	* src/lib/MarbleThemeSelectView.{h,cpp} (MarbleThemeSelectView):
	add d-pointer

	Fix Krazy issue 23: spelling errors
	* src/lib/MarbleDirs.h: spelling fixes

2007-08-18  Torsten Rahn  <rahn@kde.org>

    Changing the INSTALL file to feature
    the last working version number 
    (of Marble 0.4.0 ) and added 
    a description for adjusting MarbleDataPath

    * INSTALL 

2007-08-18  Torsten Rahn  <rahn@kde.org>

    Removing Debug calls for release and 
    Bumping up version number to 

    Marble 0.4.0

    * src/KdeMainWindow.cpp
    * src/kdemain.cpp
    * src/QtMainWindow.cpp
    * src/lib/AbstractScanlineTextureMapper.cpp
    * src/lib/TileLoader.cpp
    * src/lib/HttpDownloadManager.cpp
    * src/lib/MarbleAboutDialog.ui
    * src/lib/MarbleDirs.cpp
    * src/lib/HttpFetchFile.cpp
    * src/lib/TextureTile.cpp
    * src/lib/placemarkmodel.cpp

2007-08-18  Torsten Rahn  <rahn@kde.org>

    * src/qtmain.cpp:
    * src/kdemain.cpp:
	Added --marbleDataPath command line option.

    * src/KdeMainWindow.{cpp,h}:
    * src/QtMainWindow.{cpp,h}:
	Added ability to read marbleDataPath setting
	(if present).

    * src/lib/MarbleWidget.{cpp,h}:
	Removed redundant setters and getters for 
	MarbleDataPath (d'oh).

    * src/lib/CompassFloatItem.{cpp,h}:
	Added setSourceFile method 
	(while I was on the wrong track fixing).

2007-08-18  Andrew Manson   <g.real.ate@gmail.com>

	Attempted to Correct a small glitch with the drawing of the gps
	Tracking object.
	* src/lib/gps/GpsTracking.cpp : altertered drawing procedure
    
    Added the implementation of saving and closing a file to the 
    GpxFileModel.
    * src/lib/gps/GpxFileModel.cpp : save and close file
    
    Fixed a crash due to null pointer BoundingBox
    * src/lib/gps/TrackSegment.cpp : 
    * src/lib/BoundingBox.cpp :